<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radius_8_top_ffffff">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/colorTextGrey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/and_add_note"
        android:textColor="@color/colorTextDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_cancel" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_cancel" />

    <EditText
        android:id="@+id/et_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/and_add_event_hint"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_event">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/and_date"
            android:textColor="@color/colorTextDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextDark"
            android:textStyle="bold"
            tools:text="2021/03/03" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>