<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff6f6f6"
    tools:context=".ui.activity.SettingActivity">

    <ImageView
        android:id="@+id/iv_top_bg"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/setting" />

    <TextView
        android:id="@+id/tv_security"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_onclick"
        android:clickable="true"
        android:drawableStart="@drawable/ic_security_black_24"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/set_security"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_top_bg" />

    <TextView
        android:id="@+id/tv_backup"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_onclick"
        android:clickable="true"
        android:drawableStart="@drawable/ic_backup_black_24"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="16dp"

        android:text="@string/set_backup"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_security" />


    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_onclick"
        android:clickable="true"
        android:drawableStart="@drawable/ic_info_black_24"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/set_about"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_backup" />
</androidx.constraintlayout.widget.ConstraintLayout>