<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.EditNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_fff6f6f6"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/en_enter_title_hint"
                android:imeOptions="actionNext"
                android:maxLength="15"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textColor="@color/colorTextDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/color_fff6f6f6"
                app:layout_constraintTop_toBottomOf="@id/et_title" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start|top"
                android:hint="@string/en_enter_description_hint"
                android:imeOptions="actionNext"
                android:minHeight="200dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/colorTextDark2nd"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/color_fff6f6f6"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="12dp"
                app:layout_constraintTop_toBottomOf="@id/line2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/en_date"
                    android:textColor="@color/colorTextDark2nd"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24"
                    android:gravity="center"
                    android:hint="@string/en_select_date_hint"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_fff6f6f6"
                app:layout_constraintTop_toBottomOf="@id/ll_date" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:layout_constraintTop_toBottomOf="@id/line3">

                <TextView
                    android:id="@+id/tv_location_hint"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/en_location"
                    android:textColor="@color/colorTextDark2nd"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/et_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:background="@null"
                    android:gravity="center_vertical|end"
                    android:hint="@string/en_enter_location_hint"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:paddingEnd="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_location_hint"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line4"
                    android:layout_width="0px"
                    android:layout_height="8dp"
                    android:background="@color/color_fff6f6f6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_location" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>